# DataService/Controllers/MetadataController.cs
@@ -7,9 +7,16 @@ namespace maxbl4.Race.DataService.Controllers
     [Route("_metadata")]
     public class MetadataController: ControllerBase
     {
+        [HttpGet("get" + nameof(TimingSessionUpdate))]
         public TimingSessionUpdate GetTimingSessionUpdate()
         {
             return default;
-        } 
+        }
+        
+        [HttpGet("get" + nameof(ActiveTimingSessionsUpdate))]
+        public ActiveTimingSessionsUpdate GetActiveTimingSessionsUpdate()
+        {
+            return default;
+        }
     }
 }
